# IPMslam

./: .gitignore  CMakeLists.txt  README.md
data/: calib.yml  calib_main.yml
src/: IPM.h  icp.cpp  main.cpp
